2011-06-07 Roman
- !!:UI.WebVision: Small external pages open in DIV-window is added.


2011-06-06 Roman
- !!:FIX:DAQ.BlockCalc: Frequence calc from periodic schedule for special attribute "f_freq" of any block is fixed.
    Compatibility config property "PERIOD" using is fixed for start.
    Compatibility config property "PERIOD" integer limit is fixed for long periods in ns.
- FIX:DAQ.DCON: Compatibility config property "PERIOD" using is fixed for start.
- FIX:DAQ.LogicLev, DAQ.Siemens, DAQ.System: Compatibility config property "PERIOD" using is fixed for start.
    Compatibility config property "PERIOD" integer limit is fixed for long periods in ns.
- UI.VCAEngine, UI.Vision, UI.WebVision: Any page "name" attribute group request and using for window's names is used.


2011-06-02 Maxim
- FIX:UI.Vision: The orthogonal drawing mechanism of the line and bezier curve is changed and optimized for the primitive ElFigure.
- FIX:UI.Vision: The bazier curve initial drawing is fixed for the primitive ElFigure.


2011-05-31 Roman
- DAQ.AMRDevs, DAQ.BFN, DAQ.DCON, DAQ.OPC_UA, DAQ.SNMP, DAQ.Siemens, DAQ.System:
    The "Calc schedule" is replaced by "Acquisition schedule".


2011-05-31 Maxim
- !:UI.Vision: The drawing figures during creation with the help of mouse is added for the primitive ElFigure.


2011-05-30 Roman
- DAQ.BFN: BFN alarms category is made unified.
- FIX:DAQ.BlockCalc: An archive period for periodic taks set is fixed.
- DAQ.DCON, DAQ.LogicLev, DAQ.Siemens, DAQ.System: Block schemes calculate by schedule, include periodic and cron, is added.
- !:FIX:UI.QTCfg, UI.Vision: Syntax highlight is fixed for multilevel rules and end regular expression check, for blocks.


2011-05-28 Roman
- DAQ, DAQ.BFN, DAQ.ModBus: Specific function for alarms creation for data sources' objects TController::alarmSet() is added and used.


2011-05-26 Roman
- DAQ.BlockCalc: Block schemes calculate by schedule, include periodic and cron, is added.


2011-05-25 Roman